--- a/manifest.json
+++ b/manifest.json
@@ -1,1 +1,20 @@
-{"name":"DailySnap","short_name":"DailySnap"}
+{
+  "name": "DailySnap",
+  "short_name": "DailySnap",
+  "start_url": "./index.html",
+  "display": "standalone",
+  "background_color": "#ffffff",
+  "theme_color": "#ffffff",
+  "icons": [
+    {
+      "src": "icons/icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "icons/icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ]
+}
